contacts  page added

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -9,7 +9,26 @@
             display: flex;
             margin-top: 75px;
              }
-       
+       .c2{
+        color: black;
+    background-color:#ff3333;
+    font-family: cursive;
+    border-radius: 8px;
+    text-align: center;
+       }
+       .c3{
+        text-align: center;
+        display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: double black 5px;
+    height: 280px;
+    width: 600px;
+    margin-top: 70px;
+    margin-left: 370px;
+    border-radius: 20px;
+    box-shadow: 0px 0px 30px 5px brown;
+       }
     </style>
 </head>
 <body>
@@ -30,9 +49,35 @@
 
 
 <div class="c1">
-    <img src="../imgs/Cake-Top-Banner_web_11aug.webp" alt="" height="350px" width="1350px">
+    <img src="../imgs/Cake-Top-Banner_web_11aug.webp" alt="" height="350px" width="1300px">
 </div>
-<input type="number" placeholder="mo.no">
+
+
+
+   <div class="c3">
+    <h2><u>!!! FOR MORE INFORMATION PLEASE CONTACT US !!!</u></h2>
+    Name:<input type="text"placeholder="name"required>
+    Address:<input type="text"placeholder="address"required>
+    E-mail:<input type="email"placeholder="email"required>
+    Mobile no:<input type="number"placeholder="mo.no"size="10"required>
+    <input type="button"value="Submit">
+</div>
+<div  style="text-align: center;">
+    <h3 style="text-align: center;">Office hours:</h3>
+    Monday-friday:- 8.00 AM - 5.00 PM<br>
+    24 hours costmer servise
+</div>
+<div class="c2">
+<h2>Contact</h2>
+
+
+E-mail:-abc20@gmail.com<br>
+Phone no:-1234567890 <br>
+AT post bramhani <tal-rahuti></tal-rahuti><br>
+<br>
+</div>
+
+
 
 
 
